Badges and modal completed with code review Leaderboard github 15 form area and overlap correction Tools Modal final adjustment after code review Dashboard on changing dom for .profile or nested version all complete up to stable markup

--- a/sites/all/themes/elx_front/sass/components/badges/_badges.scss
+++ b/sites/all/themes/elx_front/sass/components/badges/_badges.scss
@@ -21,13 +21,35 @@
   .ctools-modal-content {
     opacity: 0;
     visibility: hidden;
+
+    .badge-hide {
+      display: none;
+    }
+  }
+
+  #modalBackdrop.badge-modal-backdrop-area {
+    background-color: #040a2b !important;
+    opacity: '0.8';
   }
 
   #modalContent.modal-default {
     width: 400px;
   }
 
+  #modalContent.badge-modal-content-area {
+    width: 34%;
+    margin-top: 50px;
+    margin-left: 10px;
+    background-color: white;
+    overflow: visible;
+
+    a.close {
+      cursor: pointer;
+    }
+  }
+
   #modalContent {
+
     .modal-header {
 
       width: 100%;
